--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://psdecabooter.github.io/QC-Vis",
+  "homepage": "https://psdecabooter.github.io/QC-Vis/",
   "name": "qc-vis",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
