Gave tdg gates a different color than t gates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://psdecabooter.github.io/QC-Vis/",
-  "name": "qc-vis",
+  "homepage": "https://qqq-wisc.github.io/wisq-visualizer/",
+  "name": "wisq-visualizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
