--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "@xyflow/react": "^12.6.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
